<resources>
    <string name="app_name">LoveToothAlliance</string>
    <string name="phone">手机号</string>
    <string name="pwd">密码</string>
    <string name="home">首页</string>
    <string name="record">诊断记录</string>
    <string name="message">消息</string>
    <string name="my">我的</string>
    <string name="login">登录</string>
    <string name="for_pwd">忘记密码</string>
    <string name="register_user">注册账号</string>
    <string name="state">登录/注册代表你同意</string>
    <string name="user_xy">用户协议</string>
    <string name="user_yz">短信验证码</string>
    <string name="get_yz">获取验证码</string>
    <string name="tz_phone">推荐人手机号</string>
    <string name="finish_rsg">完成注册</string>

    <string name="all">全部</string>
    <string name="obligation">待付款</string>
    <string name="edit_login">退出登录</string>
    <string name="city_search_hint">请输入城市中文名或拼音</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

    <string name="poem_0">专家简介:千古江山，英雄无觅，孙仲谋处。舞榭歌台，风流总被、雨打风吹去。
        斜阳草树，寻常巷陌，人道寄奴曾住。想当年，金戈铁马，气吞万里如虎。元嘉草草，
        封狼居胥，赢得仓皇北顾。四十三年，望中犹记，烽火扬州路。可堪回首，佛狸祠下，
        一片神鸦社鼓。凭谁问：廉颇老矣，尚能饭否？千古江山，英雄无觅，孙仲谋处。舞榭歌台，风流总被、雨打风吹去。
        斜阳草树，寻常巷陌，人道寄奴曾住。想当年，金戈铁马，气吞万里如虎。元嘉草草，
        封狼居胥，赢得仓皇北顾。四十三年，望中犹记，烽火扬州路。可堪回首，佛狸祠下，
        一片神鸦社鼓。凭谁问：廉颇老矣，尚能饭否</string>

</resources>
