<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.lovetoothalliance.app.widget.TopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"></com.lovetoothalliance.app.widget.TopBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/phone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">


            <EditText
                android:id="@+id/ed_yz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_yz"
                android:background="@null"

                />

            <Button
                android:id="@+id/btn_get_yz"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:text="@string/get_yz" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pwd"
                android:background="@null" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_tz_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tz_phone"
                android:background="@null" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"></View>

        <Button
            android:id="@+id/btn_finish_rsg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:text="@string/finish_rsg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_xy"
                android:textColor="@color/red" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
