<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.lovetoothalliance.app.widget.TopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="60dp">
    </com.lovetoothalliance.app.widget.TopBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="42dp"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="手机号"
                    android:background="@null"
                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                ></View>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_pwd"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:inputType="numberPassword"
                    android:hint="密码"
                    android:layout_height="40dp" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                ></View>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login"
                android:background="@drawable/btn_nor_down"
                android:layout_marginTop="40dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_xy"
                    android:textColor="@color/red"
                    />

            </LinearLayout>

            <com.maiml.library.BaseItemLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text_size  = "18"
                app:text_color = "@color/white"
                app:icon_margin_left = "10"
                app:icon_text_margin = "10"
                app:margin_right = "10"
                app:item_height = "50"
                app:line_color = "@color/black"
                app:right_text_size = "@color/red"
                app:right_text_color  = "@color/red"
                app:right_text_margin = "10"
                >

            </com.maiml.library.BaseItemLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            >
           <Button
               android:id="@+id/btn_for_pwd"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:text="@string/for_pwd"
               android:background="@drawable/btn_nor_down"
               />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/register_user"
                android:background="@drawable/btn_nor_down"
                />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
